# alibabacloud_log_harmony_sdk

./: .gitignore  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/pages/: Index.ets
lib_producer/: CHANGELOG.md  README.md  build-profile.json5  hvigorfile.ts  oh-package.json5
lib_producer/example/: Index.ets
lib_producer/src/main/: module.json5
lib_producer/src/main/cpp/: CMakeLists.txt  aliyun_log.c  aliyun_log_harmony_http_function.c  aliyun_log_napi.cpp  aliyun_log_napi_callback.c  aliyun_log_napi_utils.c  aliyun_log_native_logger.c
lib_producer/src/main/cpp/aliyun-log-c-sdk/: CMakeLists.txt  inner_log.h  log_api.c  log_builder.c  log_define.h  log_http_interface.c  log_http_interface.h  log_persistent_manager.c  log_producer_manager.c  log_producer_sender.c  log_zstd.c
lib_producer/src/main/cpp/include/: aliyun_log.h  aliyun_log_harmony_http_function.h  aliyun_log_napi_callback.h  aliyun_log_napi_utils.h  aliyun_log_native_logger.h
lib_producer/src/main/cpp/types/libaliyunlog/: index.d.ts  oh-package.json5
lib_producer/src/main/ets/: Index.ets
lib_producer/src/main/resources/base/element/: string.json
